--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,5 @@
 body {
-    /* background-color: #867ae9;   */
-    background: url("https://images.unsplash.com/photo-1541140134513-85a161dc4a00?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
+    background: url("https://images.unsplash.com/photo-1614851099175-e5b30eb6f696?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
     background-size: cover;
     background-repeat: no-repeat;
     padding: 25px;
@@ -54,7 +53,9 @@ body {
 
 .edit-body{
     margin-left: 550px ;
+    margin-top: 200px;
     /* margin-right: 10px; */
+
     max-width: 18rem;
 }
 #heading {
