--- a/templates/edit.html
+++ b/templates/edit.html
@@ -66,7 +66,7 @@
               <br>
             <input name="id" value="{{task.id}}" hidden="hidden" />
             <input name="task" type="text" placeholder="New-tasks" /> <br>
-            <button type="submit">Change Task</button>
+            <button class="btn btn-primary btn-sm" type="submit">Change Task</button>
           </form>
         </div>
       </div>
