--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
   </head>
   <body>
     <div id="main">
-      <h1 id="heading">TO DO LIST</h1>
+      <h1 id="heading">What do you want to do Today?</h1>
 
       <section id="no-task">
         <div class="row">
@@ -73,7 +73,7 @@
                     <!-- <h5 class="card-title">Add Task: </h5> -->
                     <input name="task" type="text" />
                     <!-- <a href="{{url_for('add_task')}}" class="btn btn-primary">Add Task</a> -->
-                    <input type="submit" value="Add Items" />
+                    <button class="btn btn-danger btn-sm" type="submit">Add Items</button>
                   </form>
                   {%else%}
                   <form action="{{url_for('add_task')}}" method="POST">
@@ -81,7 +81,7 @@
                     <!-- <h5 class="card-title">Add Task: </h5> -->
                     <input name="task" type="text" />
                     <!-- <a href="{{url_for('add_task')}}" class="btn btn-primary">Add Task</a> -->
-                    <input type="submit" value="Add Items" />
+                    <button class="btn btn-danger btn-sm" type="submit">Add Items</button>
                   </form>
                   {% endif %}
                 </div>
